# minerva-verify

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  settings.py
docs/: config.toml.example
install/: install.sh  setup.py
modules/: database.py  explore.py  hashing.py  verifying.py
myrient_folders/: Eggman’sArcadeRepository.py  No_Intro.py  Redump.py  RetroAchievements.py  TOSEC_PIX.py  T_EnCollection.py  TouhouProjectCollection.py
src/minerva_verify/: __init__.py  main.py  settings.py
src/minerva_verify/install/: install.sh  setup.py
src/minerva_verify/modules/: database.py  explore.py  verifying.py
src/minerva_verify/myrient_folders/: No_Intro.py  Redump.py  RetroAchievements.py  TOSEC.py  TOSEC_ISO.py  TeknoParrot.py  TouhouProjectCollection.py
