[project]
name = "minerva-verify"
version = "1.0.0"
authors = [
    {name = "Minerva Archive"},
    {name = "marshfellow42"},
]
maintainers = [
    {name = "marshfellow42"}
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.0",
    "pandas>=3.0.2",
    "platformdirs>=4.9.6",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
