[project]
name = "minerva-verify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Minerva Archive"},
    {name = "marshfellow42"},
]
maintainers = [
    {name = "marshfellow42"}
]
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1.0",
    "pandas>=3.0.2",
    "platformdirs>=4.9.6",
    "rich>=15.0.0",
    "textual>=8.2.4",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[project.scripts]
minerva-verify = "minerva_verify.main:app"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
